<resources>
    <string name="app_name">Weather Companion</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_day_detail">24 hour Detail</string>
    <string name="title_activity_settings_page">Settings Page</string>
    <string name="title_activity_add_location">Add Location</string>
    <item name="Date" type="id" />

    <string name="NotificationMessage" id="Noti">%1$s : %2$s</string>
    <string name="search_location_hint">Search Location</string>
    <string name="textviewDayDetail">TextView</string>
    <string name="textviewAddLocation">TextView</string>
    <string name="_21_c">21 C</string>
    <string name="cityMainScreen">Lahore</string>
    <string name="LabelMainScreen">The weathe in the city is mostly cloudy</string>
    <string name="DateMainScreen">23/04/18</string>
    <string name="DayMainScreen">Thursday</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="please_select_the_city">Please select the city</string>
    <string name="add_locations">Add Locations</string>
    <string name="settings_temperature_mode">Temperature Mode</string>
    <string name="settings_celsius">Celsius</string>
    <string name="settings_fahrenheit">Fahrenheit</string>
    <string name="settings_update_time">Update Time</string>
    <string name="settings_hour">hour</string>
    <string name="lay_day_det_time">17:00 A.M</string>
    <string name="lay_day_det_temp">21 C</string>
    <string name="lay_day_det_label">The weathe in the city is mostly cloudy</string>
    <string name="lay_main_day">Thur</string>
    <string name="lay_main_temp">21 F/ 23 F</string>
    <string name="lay_main_label">Will be raining / Might have shower</string>

</resources>
