<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="horizontal"
    android:id="@+id/relativeViewWidget"

    android:padding="@dimen/widget_margin">


    <LinearLayout


        android:orientation="vertical"
        android:layout_width="match_parent"
        android:id="@+id/linear"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewTempWidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/_21_c"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/textViewCityWidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:minLines="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/cityMainScreen"
            android:textColor="@color/colorAccent"

            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            />

        <TextView
            android:id="@+id/textViewLabelWidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/LabelMainScreen"
            android:textColor="@color/colorAccent"

            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewDayWidget"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignRight="@id/linear"

        android:src="@drawable/icon1" />


</RelativeLayout>