<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/MainScreenLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActivityMainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"


            android:layout_height="0dp"
            android:id="@+id/firstCard"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="2"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                android:animateLayoutChanges="true"

                android:backgroundTint="?attr/actionMenuTextColor"
                android:backgroundTintMode="screen"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageViewDay"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/icon1"/>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewTemp"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/_21_c"

                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3" />

                    <TextView
                        android:id="@+id/textViewCity"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:ellipsize="end"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:paddingRight="8dp"
                        android:text="@string/cityMainScreen"

                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                        tools:textColor="?android:attr/actionMenuTextColor" />

                    <TextView
                        android:id="@+id/textViewLabel"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/LabelMainScreen"

                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/secondCard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                android:orientation="horizontal">

                <com.example.a3.testapp.SupportClasses.SemiCircle
                    android:id="@+id/imageViewCust"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                     />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewDay"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/DayMainScreen"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

                    <TextView
                        android:id="@+id/textViewDate"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/DateMainScreen"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/thirdCard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>